Improve deletion
